fix: overflow of comment element with long word use `word-break: break-word` style

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -34,5 +34,9 @@
   .profile-picture-small {
     @apply h-9 w-9 rounded-full object-cover;
   }
+
+  .break-word {
+    word-break: break-word;
+  }
 }
 
